# services/indexer/openapi/leveraged-prediction-v1.json
@@ -33,6 +33,13 @@
             ],
             "type": "string"
           },
+          "position_stream": {
+            "enum": [
+              "ready",
+              "unavailable"
+            ],
+            "type": "string"
+          },
           "status": {
             "enum": [
               "live",
